# dig4bio

./: .gitignore  README.md  eda.ipynb  pyproject.toml
dig4bio/: paths.py  read_data.py
docs/: eda_notes.md  modelling_plan.md  models.md  preprocessing.md  project_structure.md
notebooks/: 01_initial_eda.ipynb
notes/: notes.md
src/dig4bio/: cli.py  data_cleaning.py  datasets.py  io.py  paths.py  utils.py
